# sso_new_student_make_results

./: README.md  hello.py  justfile  pyproject.toml
docs/: staff_installation_advice.org
sso_new_student/: main.py  main_window.py  set_data.py  table_widget.py
